Changelog
=========

Version 1.6 (UNRELEASED)
------------------------

Version 1.5.1
-------------

* Fix #2 (missing import in 'hosting.py') at
  http://plone.org/products/zopeskel/issues/2
  [nouri]

Version 1.5
-----------

* added a new local command into archetype template to inject
  new content types [spanky] 

* added a doctest for each template, and refactored the package
  so we have one python module per template [tarek] 

* Refactored the zc.buildout recipe to provide structured documention
  that will render nicely on PyPI, added comments for recipe authors
  to help writing documentation and tests and added a working doctest
  skeleton. Implemented automatic license classifiers for common
  licenses in the generated setup.py. The mapping is in zopeskel.base
  and can be used for other templates also.
  [dokai]

* The 'five:registerPackage' ZCML directive is added in a project based on the
  'plone' template only if the top level namespace package is not
  called 'Products'. This avoids having the product loaded twice in Zope.
  [davconvent]

* Added paragraph about old style Zope 2 Product installation in the
  INSTALL.txt_tmpl file of the plone template.
  The paragraph will be added to the installation instructions if the top
  level namespace package is called 'Products'.
  [davconvent]

Version 1.4
-----------

* Set the version number for plone.recipe.plone in a new versions part in
  buildout.cfg. That works around a buildout bug: buildout breaks if you change
  the revision pin for a recipe.
  [wichert]

* Fixed bug: when running 'paster create' with --no-interactive option, 
  the package variable given in the command line is ignored.
  [Mustapha]

Version 1.3.4
-------------

* Added MANIFEST.in to prevent bad releases from svn exports.
  [fschulze]

Version 1.3.3
-------------

* Move to the newly released Varnish 1.1.2.
  [wichert]

* Remove bad import which broke localcommand support.
  [deo]
