@@ -1,0 +1,1 @@
+Packages in eggs that you develop should go in this directory
